<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.RegisterPage">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="120dp"
                android:id="@+id/back_stack_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?android:attr/homeAsUpIndicator" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/register_today"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="50dp">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Register_TextInputLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/FirstName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Register_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Register_TextInputLayoutLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/LastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Register_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Register_TextInputLayoutEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Register_EmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Register_TextInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Register_Password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Register_TextInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Register_ConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button_submit_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:enabled="false"
                android:text="Submit" />

            <TextView
                android:id="@+id/text_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/have_an_account" />

            <Button
                android:id="@+id/button_to_register"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:text="Login"
                android:textSize="10sp" />


        </LinearLayout>
    </ScrollView>

</FrameLayout>